--- a/kernel/memory/15. 页面迁移/1.页面迁移.md
+++ b/kernel/memory/15. 页面迁移/1.页面迁移.md
@@ -331,15 +331,18 @@ static int move_to_new_page(struct page *newpage, struct page *page,
 	 * establishing additional references. We are the only one
 	 * holding a reference to the new page at this point.
 	 */
+	 //如果newpage已经被其他进程加锁，那么会是个bug，调用BUG()函数来处理。
 	if (!trylock_page(newpage))
 		BUG();
 
 	/* Prepare mapping for the new page.*/
+	//设置newpage的index和mapping和PG_SwapBacked标志位
 	newpage->index = page->index;
 	newpage->mapping = page->mapping;
 	if (PageSwapBacked(page))
 		SetPageSwapBacked(newpage);
 
+	//处理页面mapping情况，page_mapping()函数获取page->mapping指针，定义在mm/util.c文件中。
 	mapping = page_mapping(page);
 	if (!mapping)
 		rc = migrate_page(mapping, newpage, page, mode);
@@ -360,6 +363,7 @@ static int move_to_new_page(struct page *newpage, struct page *page,
 	} else {
 		mem_cgroup_migrate(page, newpage, false);
 		if (page_was_mapped)
+			//remove_migration_ptes()会迁移页面的每一个pte
 			remove_migration_ptes(page, newpage);
 		page->mapping = NULL;
 	}
@@ -370,3 +374,28 @@ static int move_to_new_page(struct page *newpage, struct page *page,
 }
 ```
 
+
+
+```
+struct address_space *page_mapping(struct page *page)
+{
+	struct address_space *mapping = page->mapping;
+
+	/* This happens if someone calls flush_dcache_page on slab page */
+	if (unlikely(PageSlab(page)))
+		return NULL;
+
+	if (unlikely(PageSwapCache(page))) {
+		swp_entry_t entry;
+
+		entry.val = page_private(page);
+		mapping = swap_address_space(entry);
+	} else if ((unsigned long)mapping & PAGE_MAPPING_ANON)
+		mapping = NULL;
+	return mapping;
+}
+```
+
+如果page属于slab或是匿名页面，该函数返回mapping为空，如果是PageSwapCache()，则返回swap_address_space 空间，其余为page cache的情况，直接返回page->mapping。
+
+以匿名页面为例，调用migrate_page()将旧页面的相关信息迁移到新页面。对于其他有mapping的页面，会调用mapping 指向的migratepage0函数指针或 fallback_migrate_page()函数，很多文件系统都提供这样的函数接口。
