--- a/kernel/memory/15. 页面迁移/1.页面迁移.md
+++ b/kernel/memory/15. 页面迁移/1.页面迁移.md
@@ -308,7 +308,7 @@ out:
 看看137行的move_to_new_page()函数。
 
 ```
-
+[migrate_pages()->unmap_and_move()->unmap_and_move()->move_to_new_page()]
 /*
  * Move a page to a newly allocated page
  * The page is locked and all ptes have been successfully removed.
@@ -358,6 +358,7 @@ static int move_to_new_page(struct page *newpage, struct page *page,
 	else
 		rc = fallback_migrate_page(mapping, newpage, page, mode);
 
+	//remove_migration_ptes()会迁移页面的每一个pte。
 	if (rc != MIGRATEPAGE_SUCCESS) {
 		newpage->mapping = NULL;
 	} else {
@@ -399,3 +400,216 @@ struct address_space *page_mapping(struct page *page)
 如果page属于slab或是匿名页面，该函数返回mapping为空，如果是PageSwapCache()，则返回swap_address_space 空间，其余为page cache的情况，直接返回page->mapping。
 
 以匿名页面为例，调用migrate_page()将旧页面的相关信息迁移到新页面。对于其他有mapping的页面，会调用mapping 指向的migratepage0函数指针或 fallback_migrate_page()函数，很多文件系统都提供这样的函数接口。
+
+```
+[migrate_pages()->unmap_and_move()->_unmap_and_move()->move_to_new_page()->migrate_page()]
+int migrate_page(struct address_space *mapping,
+		struct page *newpage, struct page *page,
+		enum migrate_mode mode)
+{
+	int rc;
+
+	BUG_ON(PageWriteback(page));	/* Writeback must be complete */
+	//migrate_page_move_mapping()没做任何事情
+	rc = migrate_page_move_mapping(mapping, newpage, page, NULL, mode, 0);
+
+	if (rc != MIGRATEPAGE_SUCCESS)
+		return rc;
+	
+	//会把旧页面的一些信息复制到新页面中。
+	migrate_page_copy(newpage, page);
+	return MIGRATEPAGE_SUCCESS;
+}
+```
+
+
+
+```
+[migrate_pages()->unmap_and_move()->_unmap_and_move()->move_to_new_page()->migrate_page()->migrate_page_copy()]
+
+/*
+ * Copy the page to its new location
+ */
+void migrate_page_copy(struct page *newpage, struct page *page)
+{
+	int cpupid;
+
+	if (PageHuge(page) || PageTransHuge(page))
+		copy_huge_page(newpage, page);
+	else
+		//复制旧页面的内容到新页面中，使用kmap_atomicO函数来映射页面以便读取页面的内容。
+		copy_highpage(newpage, page);
+
+	//依照旧页面中flags的比特位来设置newpage相应的标志位，例如PG_error、PG_referenced、PG_uptodate、PG_active、PG_unevictable、PG_checked和PG_mappedtodisk等。
+	if (PageError(page))
+		SetPageError(newpage);
+	if (PageReferenced(page))
+		SetPageReferenced(newpage);
+	if (PageUptodate(page))
+		SetPageUptodate(newpage);
+	if (TestClearPageActive(page)) {
+		VM_BUG_ON_PAGE(PageUnevictable(page), page);
+		SetPageActive(newpage);
+	} else if (TestClearPageUnevictable(page))
+		SetPageUnevictable(newpage);
+	if (PageChecked(page))
+		SetPageChecked(newpage);
+	if (PageMappedToDisk(page))
+		SetPageMappedToDisk(newpage);
+
+	//处理旧页面是dirty的情况。如果旧页面是匿名页面（PageSwapBacked(page)），则设置新页面的PG_dirty位；如果旧页面是page cache，则由_set_page_dirty_nobuffers()设置radix tree中dirty标志位。
+	if (PageDirty(page)) {
+		clear_page_dirty_for_io(page);
+		/*
+		 * Want to mark the page and the radix tree as dirty, and
+		 * redo the accounting that clear_page_dirty_for_io undid,
+		 * but we can't use set_page_dirty because that function
+		 * is actually a signal that all of the page has become dirty.
+		 * Whereas only part of our page may be dirty.
+		 */
+		 //
+		if (PageSwapBacked(page))
+			SetPageDirty(newpage);
+		else
+			__set_page_dirty_nobuffers(newpage);
+ 	}
+
+	/*
+	 * Copy NUMA information to the new page, to prevent over-eager
+	 * future migrations of this same page.
+	 */
+	cpupid = page_cpupid_xchg_last(page, -1);
+	page_cpupid_xchg_last(newpage, cpupid);
+
+	mlock_migrate_page(newpage, page);
+	//处理旧页面是KSM页面的情况。
+	ksm_migrate_page(newpage, page);
+	/*
+	 * Please do not reorder this without considering how mm/ksm.c's
+	 * get_ksm_page() depends upon ksm_migrate_page() and PageSwapCache().
+	 */
+	ClearPageSwapCache(page);
+	ClearPagePrivate(page);
+	set_page_private(page, 0);
+
+	/*
+	 * If any waiters have accumulated on the new page then
+	 * wake them up.
+	 */
+	if (PageWriteback(newpage))
+		end_page_writeback(newpage);
+}
+
+```
+
+回到move_to_new_page()函数中，来看第58行代码中的remove_migration_ptes()函数。
+
+```
+static void remove_migration_ptes(struct page *old, struct page *new)
+{
+	struct rmap_walk_control rwc = {
+		.rmap_one = remove_migration_pte,
+		.arg = old,
+	};
+
+	rmap_walk(new, &rwc);
+}
+```
+
+remove_migration_ptes()是典型地利用RMAP反向映射系统找到映射旧页面的每个pte，直接来看它的rmap_one函数指针。
+
+```
+[migrate_pages()->_unmap_and_move()->move_to_new_page()->remove_migration_ptes()->remove_migration_pte()]
+
+/*
+ * Restore a potential migration pte to a working pte entry
+ */
+static int remove_migration_pte(struct page *new, struct vm_area_struct *vma,
+				 unsigned long addr, void *old)
+{
+	struct mm_struct *mm = vma->vm_mm;
+	swp_entry_t entry;
+ 	pmd_t *pmd;
+	pte_t *ptep, pte;
+ 	spinlock_t *ptl;
+
+	if (unlikely(PageHuge(new))) {
+		ptep = huge_pte_offset(mm, addr);
+		if (!ptep)
+			goto out;
+		ptl = huge_pte_lockptr(hstate_vma(vma), mm, ptep);
+	} else {
+		//通过mm和虚拟地址addr找到相应的页表项pte。
+		pmd = mm_find_pmd(mm, addr);
+		if (!pmd)
+			goto out;
+
+		ptep = pte_offset_map(pmd, addr);
+
+		/*
+		 * Peek to check is_swap_pte() before taking ptlock?  No, we
+		 * can race mremap's move_ptes(), which skips anon_vma lock.
+		 */
+		//33-36行每个进程的mm数据结构中有一个保护页表的spinlock锁(mm->page_table_lock)。
+		ptl = pte_lockptr(mm, pmd);
+	}
+
+ 	spin_lock(ptl);
+ 	
+ 	//39-65行把映射的pte页表项的内容设置到新页面的pte中，相当于重新建立映射关系。
+	pte = *ptep;
+	if (!is_swap_pte(pte))
+		goto unlock;
+
+	entry = pte_to_swp_entry(pte);
+
+	if (!is_migration_entry(entry) ||
+	    migration_entry_to_page(entry) != old)
+		goto unlock;
+
+	get_page(new);
+	pte = pte_mkold(mk_pte(new, vma->vm_page_prot));
+	if (pte_swp_soft_dirty(*ptep))
+		pte = pte_mksoft_dirty(pte);
+
+	/* Recheck VMA as permissions can change since migration started  */
+	if (is_write_migration_entry(entry))
+		pte = maybe_mkwrite(pte, vma);
+
+#ifdef CONFIG_HUGETLB_PAGE
+	if (PageHuge(new)) {
+		pte = pte_mkhuge(pte);
+		pte = arch_make_huge_pte(pte, vma, new, 0);
+	}
+#endif
+	flush_dcache_page(new);
+	set_pte_at(mm, addr, ptep, pte);
+
+	if (PageHuge(new)) {
+		if (PageAnon(new))
+			hugepage_add_anon_rmap(new, vma, addr);
+		else
+			page_dup_rmap(new);
+	} //把新的页面newpage添加到RMAP反向映射系统中。
+	else if (PageAnon(new))
+		page_add_anon_rmap(new, vma, addr);
+	else
+		page_add_file_rmap(new);
+
+	/* No need to invalidate - it was non-present before */
+	//调用update_mmu_cache()更新相应的cache。增加一个新的PTE，或者修改PTE时需要调用该函数对cache进行管理，对于ARMv6以上的CPU来说，该函数是空函数，cache一致性管理在set_pte_at()函数中完成。
+	update_mmu_cache(vma, addr, ptep);
+unlock:
+	pte_unmap_unlock(ptep, ptl);
+out:
+	return SWAP_AGAIN;
+}
+```
+
+remove_migration_pte()找到其中一个映射的虚拟地址，例如参数中的vma和addr。
+
+内核中有多处使用到页的迁移的功能，列出如下。
+
+- 内存规整（memory compaction)。
+- 内存热插拔（memory hotplug）。
+- NUMA系统，系统有一个sys_migrate pages的系统调用。
