--- a/kernel/memory/16. 内存规整/1. 内存规整实现.md
+++ b/kernel/memory/16. 内存规整/1. 内存规整实现.md
@@ -61,5 +61,5 @@ __alloc_pages_direct_compact(gfp_t gfp_mask, unsigned int order,
 }
 ```
 
-内存规整是针对high-order的内存分配，所以order等于0的情况不需要触发内存规整。参数 mode 指migration_mode，通常由_alloc pages_slowpath()传递过来，其值为MIGRATE_ASYNC。
+内存规整是针对high-order的内存分配，所以order等于0的情况不需要触发内存规整。参数 mode 指migration_mode，通常由_alloc_pages_slowpath()传递过来，其值为MIGRATE_ASYNC。
     try_to_compact_pages()函数执行时需要设置当前进程的PF_MEMALLOC标志位，该标志位会在
