--- a/kernel/memory/16. 内存规整/1. 内存规整实现.md
+++ b/kernel/memory/16. 内存规整/1. 内存规整实现.md
@@ -61,5 +61,98 @@ __alloc_pages_direct_compact(gfp_t gfp_mask, unsigned int order,
 }
 ```
 
-内存规整是针对high-order的内存分配，所以order等于0的情况不需要触发内存规整。参数 mode 指migration_mode，通常由_alloc_pages_slowpath()传递过来，其值为MIGRATE_ASYNC。
-    try_to_compact_pages()函数执行时需要设置当前进程的PF_MEMALLOC标志位，该标志位会在
+内存规整是针对high-order的内存分配，所以order等于0的情况不需要触发内存规整。参数 mode 指migration_mode，通常由_alloc_pages_slowpath()传递过来，其值为MIGRATE_ASYNC
+
+try_to_compact_pages()函数执行时需要设置当前进程的PF_MEMALLOC标志位，该标志位会在页迁移时用到，避免页面锁（PG_Locked）发生死锁。第37行代码，当内存规整执行完成后，调用get_page_from_freelist()来尝试分配内存，如果分配成功将返回首页page数据结构。
+
+回到compact_zone()函数中，第41行代码中的isolate_migratepages()扫描并且寻觅zone中可迁移的页面，可迁移的页面会添加到cc->migratepages链表中。
+
+下面来看寻觅可迁移页面的函数 isolate_migratepages()。
+
+```
+[__alloc_pages_direct_compact()->try_to_compact_pages-> compact_zone_order()-compact_zone()->isolate_migratepages()]
+
+/*
+ * Isolate all pages that can be migrated from the first suitable block,
+ * starting at the block pointed to by the migrate scanner pfn within
+ * compact_control.
+ */
+static isolate_migrate_t isolate_migratepages(struct zone *zone,
+					struct compact_control *cc)
+{
+	unsigned long low_pfn, end_pfn;
+	struct page *page;
+	const isolate_mode_t isolate_mode =
+		(cc->mode == MIGRATE_ASYNC ? ISOLATE_ASYNC_MIGRATE : 0);
+
+	/*
+	 * Start at where we last stopped, or beginning of the zone as
+	 * initialized by compact_zone()
+	 */
+	low_pfn = cc->migrate_pfn;
+
+	/* Only scan within a pageblock boundary */
+	end_pfn = ALIGN(low_pfn + 1, pageblock_nr_pages);
+
+	/*
+	 * Iterate over whole pageblocks until we find the first suitable.
+	 * Do not cross the free scanner.
+	 */
+	for (; end_pfn <= cc->free_pfn;
+			low_pfn = end_pfn, end_pfn += pageblock_nr_pages) {
+
+		/*
+		 * This can potentially iterate a massively long zone with
+		 * many pageblocks unsuitable, so periodically check if we
+		 * need to schedule, or even abort async compaction.
+		 */
+		if (!(low_pfn % (SWAP_CLUSTER_MAX * pageblock_nr_pages))
+						&& compact_should_abort(cc))
+			break;
+
+		page = pageblock_pfn_to_page(low_pfn, end_pfn, zone);
+		if (!page)
+			continue;
+
+		/* If isolation recently failed, do not retry */
+		if (!isolation_suitable(cc, page))
+			continue;
+
+		/*
+		 * For async compaction, also only scan in MOVABLE blocks.
+		 * Async compaction is optimistic to see if the minimum amount
+		 * of work satisfies the allocation.
+		 */
+		if (cc->mode == MIGRATE_ASYNC &&
+		    !migrate_async_suitable(get_pageblock_migratetype(page)))
+			continue;
+
+		/* Perform the isolation */
+		low_pfn = isolate_migratepages_block(cc, low_pfn, end_pfn,
+								isolate_mode);
+
+		if (!low_pfn || cc->contended) {
+			acct_isolated(zone, cc);
+			return ISOLATE_ABORT;
+		}
+
+		/*
+		 * Either we isolated something and proceed with migration. Or
+		 * we failed and compact_zone should decide if we should
+		 * continue or not.
+		 */
+		break;
+	}
+
+	acct_isolated(zone, cc);
+	/*
+	 * Record where migration scanner will be restarted. If we end up in
+	 * the same pageblock as the free scanner, make the scanners fully
+	 * meet so that compact_finished() terminates compaction.
+	 */
+	cc->migrate_pfn = (end_pfn <= cc->free_pfn) ? low_pfn : cc->free_pfn;
+
+	return cc->nr_migratepages ? ISOLATE_SUCCESS : ISOLATE_NONE;
+}
+```
+
