--- a/kernel/memory/16. 内存规整/1. 内存规整实现.md
+++ b/kernel/memory/16. 内存规整/1. 内存规整实现.md
@@ -443,17 +443,77 @@ static unsigned long __compaction_suitable(struct zone *zone, int order,
 - 接下来以order为0来判断zone是否在低水位WMARKLOW+2<<order之上，如果达不到这个条件，说明zone中只有很少的空闲页面，不适合做内存规整，返回COMPACT_SKIPPED表示跳过这个zone。
 - 其余情况返回COMPACT_CONTINUE表示zone可以做内存规整。
 
-第29~47行代码，设置cc->migrate_pn和cc->freepfn。简单来说，cc->migrate pfn设置为zone的开始pfn（zone->zone_start pfn)，表示从zone的第一个页面开始扫描和查找哪些页面可以被迁移。cc->freepfn设置为zone的最末的pfn，表示从zone的最末端开始扫描和查找有哪些空闲的页面可以用作迁移页面目的地。
+第12~47行代码，设置cc->migrate_pn和cc->freepfn。简单来说，cc->migrate pfn设置为zone的开始pfn（zone->zone_start pfn)，表示从zone的第一个页面开始扫描和查找哪些页面可以被迁移。cc->freepfn设置为zone的最末的pfn，表示从zone的最末端开始扫描和查找有哪些空闲的页面可以用作迁移页面目的地。
 
-第37~68行代码，while循环从zone的开头处去扫描和查找合适的迁移页面，然后尝试迁移到zone末端的空闲页面中，直到zone处于低水位WMARKLOW之上。
+第56~95行代码，while循环从zone的开头处去扫描和查找合适的迁移页面，然后尝试迁移到zone末端的空闲页面中，直到zone处于低水位WMARKLOW之上。
 
-第36行代码，compact_finished()判断compact 过程是否可以结束。__compact_finished()函数的定义如下：
+第54行代码，compact_finished()判断compact 过程是否可以结束。__compact_finished()函数的定义如下：
 
+```
+[compact_zone_order()->compact_zone()->__compact_finished()]
 
+static int __compact_finished(struct zone *zone, struct compact_control *cc,
+			    const int migratetype)
+{
+	unsigned int order;
+	unsigned long watermark;
 
+	if (cc->contended || fatal_signal_pending(current))
+		return COMPACT_PARTIAL;
 
+	/* Compaction run completes if the migrate and free scanner meet */
+	if (cc->free_pfn <= cc->migrate_pfn) {
+		/* Let the next compaction start anew. */
+		zone->compact_cached_migrate_pfn[0] = zone->zone_start_pfn;
+		zone->compact_cached_migrate_pfn[1] = zone->zone_start_pfn;
+		zone->compact_cached_free_pfn = zone_end_pfn(zone);
 
-回到compact_zone()函数中，第41行代码中的isolate_migratepages()扫描并且寻觅zone中可迁移的页面，可迁移的页面会添加到cc->migratepages链表中。
+		/*
+		 * Mark that the PG_migrate_skip information should be cleared
+		 * by kswapd when it goes to sleep. kswapd does not set the
+		 * flag itself as the decision to be clear should be directly
+		 * based on an allocation request.
+		 */
+		if (!current_is_kswapd())
+			zone->compact_blockskip_flush = true;
+
+		return COMPACT_COMPLETE;
+	}
+
+	/*
+	 * order == -1 is expected when compacting via
+	 * /proc/sys/vm/compact_memory
+	 */
+	if (cc->order == -1)
+		return COMPACT_CONTINUE;
+
+	/* Compaction run is not finished if the watermark is not met */
+	watermark = low_wmark_pages(zone);
+
+	if (!zone_watermark_ok(zone, cc->order, watermark, cc->classzone_idx,
+							cc->alloc_flags))
+		return COMPACT_CONTINUE;
+
+	/* Direct compactor: Is a suitable page free? */
+	for (order = cc->order; order < MAX_ORDER; order++) {
+		struct free_area *area = &zone->free_area[order];
+
+		/* Job done if page is free of the right migratetype */
+		if (!list_empty(&area->free_list[migratetype]))
+			return COMPACT_PARTIAL;
+
+		/* Job done if allocation would set block type */
+		if (order >= pageblock_order && area->nr_free)
+			return COMPACT_PARTIAL;
+	}
+
+	return COMPACT_NO_SUITABLE_PAGE;
+}
+```
+
+结束的条件有两个，一是cc->migrate_pfn和cc->free_pfn两个指针相遇，它们从zone的一头一尾向中间方向运行，见第13~29行代码；二是以order为条件判断当前zone的水位在低水位WMARKLOW之上。如果当前zone在低水位WMARK_LOW之上，那么需要判断伙伴系统中的order对应的zone中的可移动类型的空闲链表是否为空（zone->freearea[order].free_list[MIGRATE_MOVABLE]),最好的结果是order对应的free_area链表正好有空闲页面，或者大于order的空闲链表里有空闲页面，再或者大于pageblock_order的空闲链表有空闲页面。
+
+回到compact_zone()函数中，第59行代码中的isolate_migratepages()扫描并且寻觅zone中可迁移的页面，可迁移的页面会添加到cc->migratepages链表中。
 
 下面来看寻觅可迁移页面的函数 isolate_migratepages()。
 
