--- a/kernel/memory/16. 内存规整/1. 内存规整实现.md
+++ b/kernel/memory/16. 内存规整/1. 内存规整实现.md
@@ -823,4 +823,65 @@ isolate_success:
 
 第79行代码，如果该页还在伙伴系统中，那么该页不适合迁移，略过该页。通过pageorder_unsafe()读取该页的order值，for循环可以直接略过这些页。
 
-第46~54行代码，在LRU链表中的页面或balloon页面适合迁移，其他类型的页面将被略过。
+第97~105行代码，在LRU链表中的页面或balloon页面适合迁移，其他类型的页面将被略过。
+
+第132~134行代码，之前已经排除了PageBuddy和页不在LRU链表的情况，接下来剩下的页面是比较合适的候选者，但是还有一些特殊情况需要过滤掉。page_mapping()返回0，说明有可能是匿名页面。对于匿名页面来说，通常情况下page_count(page)=page_mapcount(page)，即page->\_count=page>_mapcount+1。如果它们不相等，说明内核中有人偷偷使用了这个匿名页面，所以匿名页面也不适合迁移。
+
+第137~150行代码，加锁zone->lrulock，并且重新判断该页是否是LRU链表中的页。
+
+第155行代码，isolate_lru_page()分离ISOLATE_ASYNC_MIGRATE 类型的页面。isolatelru_page()函数之前分析过，对于正在回写的页面是不合格的候选者，对于脏的页面，如果该页没有定义mapping->a_ops->migratepage()函数指针，那么也是不合格的候选者，另外还会对该页的page->_count引用计数加1并清PG_lru标志位。
+
+第161行代码，把该页从LRU链表中删掉。
+
+第163~171行代码，表示该页是一个合格的、可以迁移的页面，添加到cc->migratelist链表中。
+
+适合被内存规整迁移的页面总结如下。
+
+- 必须在LRU链表中的页面，还在伙伴系统中的页面不适合。
+- 正在回写中的页面不适合，即标记有PG_writeback的页面。
+- 标记有PG_unevictable的页面不适合。
+- 没有定义mapping->a_ops->migratepage()方法的脏页面不合适。
+
+
+
+继续来看compact_zone()函数。
+
+第53行代码中的migrate_pages()是迁移页的核心函数，从cc->migratepages链表中摘取页，然后尝试去迁移页。compaction_alloc()从zone的末尾开始查找空闲页面，并把空闲页面添加到cc->freepages链表中。
+
+migrate_pages()函数在页迁移一节中已经介绍，其中get new_page 函数指针指向compaction_alloc()函数，put_new_page函数指针指向compaction_free()函数，迁移模式为MIGRATE_ASYNC，reason为MR_COMPACTION。
+
+```
+/*
+ * This is a migrate-callback that "allocates" freepages by taking pages
+ * from the isolated freelists in the block we are migrating to.
+ */
+static struct page *compaction_alloc(struct page *migratepage,
+					unsigned long data,
+					int **result)
+{
+	struct compact_control *cc = (struct compact_control *)data;
+	struct page *freepage;
+
+	/*
+	 * Isolate free pages if necessary, and if we are not aborting due to
+	 * contention.
+	 */
+	if (list_empty(&cc->freepages)) {
+		if (!cc->contended)
+			isolate_freepages(cc);
+
+		if (list_empty(&cc->freepages))
+			return NULL;
+	}
+
+	freepage = list_entry(cc->freepages.next, struct page, lru);
+	list_del(&freepage->lru);
+	cc->nr_freepages--;
+
+	return freepage;
+}
+```
+
+上述内容在查找哪些页面适合迁移，compaction_alloc()函数是从zone尾部开始查找哪些页面是空闲页面，核心函数是isolate_freepages()函数，它与之前的isolate_migratepages()函数很相似，请读者自行阅读。compaction_alloc()函数最后会返回一个空闲的页面。
+
+第58~63行代码，处理迁移页面失败的情况，没迁移成功的页面会放回到合适的LRU链表中。
